# VulkanCompute

./: .gitignore  CMakeLists.back  CMakeLists.txt  README.md  compute.c  compute.h  cross_file.txt  device.c  device.h  instance.c  instance.h  main.c  memory.c  memory.h  meson.build  pipeline.c  pipeline.h  shader.comp
.cache/clangd/index/: compute.c.D8673C2F126AE05A.idx  compute.h.0FD7F03539FE1C4B.idx  device.c.8BA6BD1D1FEDBFA7.idx  device.h.E98B4A229B963321.idx  instance.c.857A0C4A0B94532B.idx  instance.h.CD3EF85547B663CF.idx  main.c.7ADC44BD3AB425AB.idx  memory.c.AC1DEF7F4389CC02.idx  memory.h.0D5ACE0465E4E37C.idx  pipeline.c.2F13116CC066A959.idx  pipeline.h.86DD16CA7899ACA0.idx
